syntax = "proto3";

package com.example.helloworld;

option java_multiple_files = true;
option java_package = "com.example.proto";

service HelloWorld {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
